--- a/app/src/main/res/layout/activity_kitchens_list.xml
+++ b/app/src/main/res/layout/activity_kitchens_list.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:layout_margin="20dp"
         android:id="@+id/kitchen_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:divider="@null"
         android:scrollbars="none">
     </ListView>
 
