--- a/app/src/main/res/layout/activity_select_user.xml
+++ b/app/src/main/res/layout/activity_select_user.xml
@@ -5,6 +5,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/home_background">
 
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/app_logo"
         android:layout_width="100dp"
@@ -23,6 +28,7 @@
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/user_button"
+        android:layout_margin="5dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/login_button_background"
@@ -36,6 +42,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:layout_margin="5dp"
         android:background="@drawable/login_button_background"
         android:text="@string/food_provider"
         android:textAllCaps="false"
