--- a/app/src/main/res/layout/delegate_dish_details.xml
+++ b/app/src/main/res/layout/delegate_dish_details.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="5dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:layout_margin="5dp"
+        android:background="@drawable/card_view_background"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
     <android.support.v7.widget.CardView
-        android:background="#d3d3d3"
-        android:layout_marginTop="5dp"
+        android:layout_margin="1dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="5dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/dish_image"
@@ -24,15 +29,15 @@
             android:layout_height="70dp"
             android:src="@mipmap/ic_launcher"
             android:layout_centerVertical="true"
-            app:civ_border_width="2dp"
-            app:civ_border_color="#000" />
+            app:civ_border_width="1dp"
+            app:civ_border_color="#F57C00" />
         <View
             android:id="@+id/dish_view"
             android:layout_toRightOf="@+id/dish_image"
             android:background="#000"
             android:layout_width="1dp"
             android:layout_margin="15dp"
-            android:layout_height="70dp"/>
+            android:layout_height="80dp"/>
 
             <RelativeLayout
                 android:id="@+id/layout_dish_name"
@@ -102,9 +107,10 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/dish_price_tv"
+                android:id="@+id/dish_price"
                 android:layout_toRightOf="@+id/dish_price_title"
                 android:text="$50"
+                android:layout_marginTop="2dp"
                 android:textColor="#000"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -112,4 +118,5 @@
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
+    </RelativeLayout>
 </RelativeLayout>
