--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
+
+        <item
+            android:id="@+id/add_dish"
+            android:icon="@drawable/menu"
+            android:title="Add Dish" />
+
         <item
             android:id="@+id/update_profile"
             android:icon="@drawable/edit_user"
