--- a/app/src/main/res/layout/delegate_dish_details.xml
+++ b/app/src/main/res/layout/delegate_dish_details.xml
@@ -66,7 +66,7 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/layout_dish_quantity"
+                android:id="@+id/layout_deliverable"
                 android:layout_marginTop="5dp"
                 android:layout_below="@+id/layout_dish_name"
                 android:layout_toRightOf="@+id/dish_view"
@@ -74,17 +74,17 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/dish_quantity"
+                    android:id="@+id/dish_deliverable"
                     android:textSize="15sp"
-                    android:text="Dish Quantity : "
+                    android:text="Deliverable : "
                     android:textColor="#000"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:id="@+id/dish_for_person"
-                    android:layout_toRightOf="@+id/dish_quantity"
-                    android:text="one"
+                    android:id="@+id/deliverable"
+                    android:layout_toRightOf="@+id/dish_deliverable"
+                    android:text="Yes"
                     android:textColor="#000"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
@@ -93,7 +93,7 @@
             <RelativeLayout
                 android:id="@+id/layout_dish_price"
                 android:layout_marginTop="5dp"
-                android:layout_below="@+id/layout_dish_quantity"
+                android:layout_below="@+id/layout_deliverable"
                 android:layout_toRightOf="@+id/dish_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
