--- a/app/src/main/res/layout/delegate_kitchen_dishes_details.xml
+++ b/app/src/main/res/layout/delegate_kitchen_dishes_details.xml
@@ -24,8 +24,8 @@
                 android:id="@+id/dish_image"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="5dp"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:src="@mipmap/ic_launcher"
                 app:civ_border_width="1dp"
                 app:civ_border_color="#F57C00" />
@@ -38,6 +38,7 @@
                 android:layout_height="70dp"/>
 
             <RelativeLayout
+                android:layout_marginTop="10dp"
                 android:id="@+id/layout_dish_name"
                 android:layout_toRightOf="@+id/dish_view"
                 android:layout_width="match_parent"
@@ -64,34 +65,9 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/layout_deliverable"
-                android:layout_marginTop="5dp"
-                android:layout_below="@+id/layout_dish_name"
-                android:layout_toRightOf="@+id/dish_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/dish_deliverable"
-                    android:textSize="15sp"
-                    android:text="Deliverable : "
-                    android:textColor="#000"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/deliverable"
-                    android:layout_toRightOf="@+id/dish_deliverable"
-                    android:text="Yes"
-                    android:textColor="#000"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </RelativeLayout>
-
-            <RelativeLayout
                 android:id="@+id/layout_dish_price"
                 android:layout_marginTop="5dp"
-                android:layout_below="@+id/layout_deliverable"
+                android:layout_below="@+id/layout_dish_name"
                 android:layout_toRightOf="@+id/dish_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -114,9 +90,9 @@
             </RelativeLayout>
 
                 <TextView
+                    android:id="@+id/dish_description_title"
                     android:layout_marginTop="15dp"
                     android:layout_below="@+id/dish_image"
-                    android:id="@+id/dish_description_title"
                     android:textSize="15sp"
                     android:layout_marginLeft="5dp"
                     android:text="Dish Descriptions"
@@ -124,14 +100,22 @@
                     android:textColor="#000"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+            <View
+                android:id="@+id/description_view"
+                android:layout_below="@+id/dish_description_title"
+                android:background="#dd9906"
+                android:layout_width="match_parent"
+                android:layout_margin="5dp"
+                android:layout_height="1dp"/>
 
                 <TextView
                     android:id="@+id/dish_description"
                     android:layout_marginLeft="5dp"
                     android:layout_marginBottom="2dp"
-                    android:layout_below="@+id/dish_description_title"
+                    android:layout_below="@+id/description_view"
                     android:text="Typically smoked or boiled, ham hocks generally consist of much skin, tendons and ligaments."
                     android:textColor="#000"
+                    android:paddingBottom="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
