--- a/app/src/main/res/menu/redius.xml
+++ b/app/src/main/res/menu/redius.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/refresh"
+        android:icon="@mipmap/refresh"
         android:title="@string/refresh_kitchen"
         app:showAsAction="always" />
 
